Préparation du doc LaTeX.

--- a/Compte-Rendu.tex
+++ b/Compte-Rendu.tex
@@ -48,7 +48,7 @@
 \fancyhf[FC]{\thepage}
 % \addbibresource{References.bib}
 \title{\textbf{MU4MEN01 --~Projet d'Optimisation}}
-\author{AKIL Adam, Zeca, NOCHÉ Kévin} % Mettre ton nom de famille, Zeca.
+\author{AKIL Adam, BUCLET Zeca, NOCHÉ Kévin} % Mettre ton nom de famille, Zeca.
 \date{\today}
 
 
@@ -61,6 +61,6 @@
     \section*{Introduction}\addcontentsline{toc}{section}{Introduction}
     \section*{La fonction \texttt{Simulation()}}\addcontentsline{toc}{section}{La fonction \texttt{Simulation()}}
     \section*{Monte-Carlo}\addcontentsline{toc}{section}{Monte-Carlo}
-    \section*{Algorithme NSGA-II}\addcontentsline{toc}{section}{Algoruthme NSGA-II}
+    \section*{Algorithme NSGA-II}\addcontentsline{toc}{section}{Algorithme NSGA-II}
     \section*{Conclusion}\addcontentsline{toc}{section}{Conclusion}
 \end{document}
