--- a/Compte-Rendu.tex
+++ b/Compte-Rendu.tex
@@ -72,6 +72,8 @@
         De rapides et simples calculs nous permettent de trouver la vitesse du train, puis son accélération, primordiales pour la suite du projet.
 
     \section*{La fonction \texttt{Simulation()}}\addcontentsline{toc}{section}{La fonction \texttt{Simulation()}}
+        \subsection*{Sans Batterie}\addcontentsline{toc}{section}{Sans Batterie}
+        \subsection*{Avec Batterie}\addcontentsline{toc}{section}{Avec Batterie}
 
 
     \section*{Monte-Carlo}\addcontentsline{toc}{section}{Monte-Carlo}
