--- a/Compte-Rendu.tex
+++ b/Compte-Rendu.tex
@@ -134,7 +134,7 @@
             \centering
             \includegraphics[width=0.75\textwidth]{Figures/Bat_F.png}
             \includegraphics[width=0.75\textwidth]{Figures/Qual_F.png}
-            \caption{Résultats de la simulation du train, pour une batterie de capacité $1,5$~kWh et un seuil de $300$~kW (paramètres optimisés selon l'algorithme NSGA-II).}
+            \caption{Résultats de la simulation du train, pour une batterie de capacité $1,5$~kWh et un seuil de $300$~kW (paramètres optimisés selon l'algorithme NSGA-II). L'indicateur de qualité est représenté par la chute de tension maximale aux bornes du train; une chute de plus de $290$~V est dangereuse.}
             \label{fig:Con}
         \end{figure}
 
