Rectification de fautes.

--- a/Compte-Rendu.tex
+++ b/Compte-Rendu.tex
@@ -94,7 +94,7 @@
         Ayant maintenant à notre diposition un classement des individus selon leurs performances, on sélectionne les $50\%{}$ meilleurs dans ce classement, puis les croisons afin de créer la génération suivante.
         Puis le cycle recommence, pour un total de $N$ itérations.
 
-        Il faut savoir que NSGA-II, demandant un classement des solutions selon leur dominance, doit utiliser une fonction qui classe les solutions selon cette ordre. Pour ceux qui regarderait notre code, il s'agit de la fonction \texttt{non\_dominant\_sort()} (voir figure \ref{fig:non_dominant_sort}).
+        Il faut savoir que NSGA-II, demandant un classement des solutions selon leur dominance, doit utiliser une fonction qui classe les solutions selon cette ordre. Pour ceux qui regarderaient notre code, il s'agit de la fonction \texttt{non\_dominant\_sort()} (voir figure \ref{fig:non_dominant_sort}).
 
         \begin{figure}[H]
             \centering
