--- a/Compte-Rendu.tex
+++ b/Compte-Rendu.tex
@@ -103,13 +103,13 @@
             \label{fig:non_dominant_sort}
         \end{figure}
 
-        Et, pour sélectionner les $50\%{}$ meilleurs, nous utilisons la fonction ci-dessous:
+        Et, pour sélectionner les $50\%{}$ meilleurs, nous utilisons la fonction ci-dessous affichée en figure \ref{fig:select_half_best}:
 
         \begin{figure}[H]
             \centering
             \includegraphics[width=0.75\textwidth]{Figures/select_half_best.png}
             \caption{Sélection des $50\%{}$ meilleurs.}
-            \label{fig:non_dominant_sort}
+            \label{fig:select_half_best}
         \end{figure}
 
         Comme affiché sur la figure \ref{fig:NSGA2}, les solutions intéressantes pour notre batterie semblent se trouver aux alentours de $1,5$ ou $2$~kWh, pour un seuil vers les $300$~kW et une chute de $200$~V (les points rouges représentant la dernière génération créée par notre algorithme).
