Finalisation du CR.

--- a/Compte-Rendu.tex
+++ b/Compte-Rendu.tex
@@ -94,7 +94,7 @@
             \end{figure}
 
             Pour calculer ces variations, la fonction
-            np.gradient a été utilisée.
+            \texttt{np.gradient} a été utilisée.
 
             Ensuite, la puissance du train a été déterminée en intégrant les forces résistives, motrices et
             mécaniques, en tenant compte d’un rendement global de $80$\%{} pour la chaîne de conversion.
@@ -107,12 +107,11 @@
             \end{figure}
 
         \subsection*{Avec Batterie}\addcontentsline{toc}{subsection}{Avec Batterie}
-            L’introduction d’une batterie (rendement de $90$\%{}, capacité de $10$ kWh et tension de seuil de $400$~kV) modifie les dynamiques observées. Les graphiques indiquent que les relations entre la
+            L’introduction d’une batterie (rendement de $90$\%{}, capacité de $10$ kWh et tension de seuil de $280$~kV) modifie les dynamiques observées. Les graphiques indiquent que les relations entre la
             puissance, la tension et le courant restent cohérentes. Durant les phases d’accélération, la
-            batterie se décharge, tandis qu’elle se recharge lors du freinage. Grâce à sa grande capacité et à
-            sa tension élevée, la batterie ne se décharge jamais complètement.
+            batterie se décharge, tandis qu’elle se recharge lors du freinage.
 
-            Concernant la gestion de la batterie, on a suivit la logique (indiqué figure \ref{fig:AdamCode_1}):
+            Concernant la gestion de la batterie, on a suivi la logique (indiqué figure \ref{fig:AdamCode_1}):
 
             \begin{figure}[H]
                 \centering
@@ -121,7 +120,7 @@
                 \label{fig:AdamCode_1}
             \end{figure}
 
-            Le système globale peut-être schématiser comme le modèle ci-dessous:
+            Le système globale peut-être schématisé comme le modèle ci-dessous:
 
             \begin{figure}[H]
                 \centering
@@ -147,13 +146,11 @@
                 \label{fig:PTI}
             \end{figure}
 
-            On observe ainsi que les relations entre la puissance, la tension et le courant sont respecté. Lors
+            On observe ainsi que les relations entre la puissance, la tension et le courant sont respectées. Lors
             des phases d’accélération ou de freinage on a une variation de ces éléments.
 
-            Concernant la batterie, celle ci réagit également comme nous l’avions prévu, à savoir que lors du
-            freinage celle-ci se recharge, puis lors des phases d’accélération elle se décharge. Étant donné
-            que nous avons prit une très grande batterie ($10$~kW) et une tension de seuil élevé, la batterie ne se
-            décharge jamais complètement.
+            Concernant la batterie, celle-ci réagit également comme nous l’avions prévu, à savoir que lors du
+            freinage celle-ci se recharge, puis lors des phases d’accélération elle se décharge.
 
             \begin{figure}[H]
                 \centering
@@ -163,10 +160,9 @@
             \end{figure}
 
             \subsection*{Analyse des sous-stations et qualité du système}\addcontentsline{toc}{subsection}{Analyse des sous-stations et qualité du système}
-            Les graphiques montrent que le courant et la puissance dans les LAC (Lignes Aériennes de
-            Contact) des sous-stations sont équilibrés. On constate également que, lorsque le train
+            Les graphiques montrent que le courant et la puissance dans les LAC des sous-stations sont équilibrés. On constate également que, lorsque le train
             s’approche de la sous-station 2, la puissance et le courant fournis par celle-ci augmentent
-            proportionnellement.
+            proportionnellement (figure \ref{fig:PI}).
 
             \begin{figure}[H]
                 \centering
@@ -188,26 +184,26 @@
             \end{figure}
 
     \section*{Monte-Carlo}\addcontentsline{toc}{section}{Monte-Carlo}
-        Pour optimiser notre système, nous avons d'abord utilisé la méthode Monte-Carlo. Cette méthode est facile à implémenter et repose uniquement sur une      utilisation brute de la force de calcul.\\
+        Pour optimiser notre système, nous avons d'abord utilisé la méthode Monte-Carlo. Cette méthode est facile à implémenter et repose uniquement sur une utilisation brute de la force de calcul.\\
         
         Comme décrit dans l'énoncé, on cherche à échantillonner l’espace des solutions avec un grand nombre de points puis de calculer leurs performances. On place ensuite ces points dans l'espace des solutions et déterminons les solutions non dominées et finalement la solution optimale.
 
         \subsection*{Echantillonnage}
-            Avec la fonction \textit{np.linespace()} on commence par créer deux tableau de 1000 valeurs également espacés: 
+            Avec la fonction \textit{np.linespace()} on commence par créer deux tableaux de 1000 valeurs également espacées:
             \begin{itemize}
-                \item \textbf{Capa} (capacité de la batterie) allant de 0 à 14 kW.
-                \item \textbf{Seuil} (Puissance seuil maximum du train) allant de 0 à 1 MW.
+                \item \textbf{Capa} (capacité de la batterie) allant de 0 à 14~kW.
+                \item \textbf{Seuil} (Puissance seuil maximum du train) allant de 0 à 1~MW.
             \end{itemize}
             
             Nous avons choisi ces valeurs par rapport au PDF de complément.
 
         \subsection*{Affichage des solutions}
-            On choisit ensuite 1000 couples (\textbf{Capa},\textbf{Seuil}) de façon aléatoire avec la fonction \textit{random.choice()}. En plottant cela dans l'espace des solutions nous obtenons le graphique suivant : 
+            On choisit ensuite 1000 couples (\textbf{Capa}, \textbf{Seuil}) de façon aléatoire avec la fonction \textit{random.choice()}. En plottant cela dans l'espace des solutions nous obtenons le graphique suivant :
 
             \begin{figure}[H]
                 \centering
                 \includegraphics[height=7cm]{espace_solution.png}
-                \caption{Espace des solutions}
+                \caption{Espace des solutions.}
             \end{figure}
 
             En reportant cela dans l'espace des objectifs, nous obtenons: 
@@ -215,71 +211,73 @@
             \begin{figure}[H]
                 \centering
                 \includegraphics[height=7cm]{espace_objectifs.png}
-                \caption{Espace des objectifs}
+                \caption{Espace des objectifs.}
             \end{figure}
 
-            Nous avons ensuite crée une fonction qui prend en argument une population et retourne les solutions non dominés. Cette fonction s'appelle \textit{non\_dominant\_sort(}pop\textit{)} et est disponible dans notre code.\\
+            Nous avons ensuite crée une fonction qui prend en argument une population et retourne les solutions non dominées. Cette fonction s'appelle \textit{non\_dominant\_sort(}pop\textit{)} et est disponible dans notre code.\\
             
-            Voici nos resultats avec les solutions non dominés en rouge: 
+            Voici nos résultats avec les solutions non dominées en rouge:
 
             \begin{figure}[H]
                 \centering
                 \includegraphics[height=7cm]{Monte-Carlo_pareto.png}
-                \caption{Espace des objectifs avec solutions non dominés}
+                \caption{Espace des objectifs avec solutions non dominées.}
             \end{figure}
 
-            Enfin, nous déterminons la meilleure solution avec la fonction \textit{choisir\_meilleur\_point()} qui prend en paramètre le front de pareto, ainsi que le poids que nous accordons à chacun des paramètres à optimiser. A savoir la chute de tension et la capacité de la batterie.\\
+            Enfin, nous déterminons la meilleure solution avec la fonction \textit{choisir\_meilleur\_point()} qui prend en paramètre le front de pareto, ainsi que le poids que nous accordons à chacun des paramètres à optimiser (à savoir la chute de tension et la capacité de la batterie).\\
             
             Sur le graphique précédant, nous pouvons voir que la chute de tension possède une grande plage de variation sur les meilleures solutions tandis que la capacité reste surtout entre 0 et 2000. Nous accordons donc un poids plus important à la chute de tension.
-            Nous nous retrouvons enfin avec le graphique ci dessous, avec en vert la solution la plus optimale et ses specificités en note sous les graphiques:   
+            Nous nous retrouvons enfin avec le graphique ci dessous, avec en vert la solution la plus optimale et ses spécificités en note sous les graphiques:
 
             \begin{figure}[H]
                 \centering
                 \includegraphics[height=7cm]{Monte-Carlo_meilleur_solution.png}
-                \caption{Espace des objectifs avec solutions non dominés et meilleure solution}
+                \caption{Espace des objectifs avec solutions non dominées et meilleure solution.}
             \end{figure}
 
         \subsection*{Résultats}
-            En simulant plusieurs fois, nous obtenons des résultats qui varient légèrement à cause de la répartition aléatoire des points. Ci dessous se trouvent 3 graphiques avec toujours 1000 couples échantillons. 
+            En simulant plusieurs fois, nous obtenons des résultats qui varient légèrement à cause de la répartition aléatoire des points. Ci-dessous se trouvent 3 graphiques avec toujours 1000 couples échantillons.
 
             \begin{figure}[H]
                 \centering
                 \includegraphics[height=7cm]{Monte-Carlo.png}
-                \caption{Espace des objectifs avec solutions non dominés et meilleure solution}
+                \caption{Espace des objectifs avec solutions non dominées et meilleure solution.}
             \end{figure}
 
             \begin{figure}[H]
                 \centering
                 \includegraphics[height=7cm]{Monte-Carlo(1).png}
-                \caption{Espace des objectifs avec solutions non dominés et meilleure solution}
+                \caption{Espace des objectifs avec solutions non dominées et meilleure solution.}
             \end{figure}
 
             \begin{figure}[H]
                 \centering
                 \includegraphics[height=7cm]{Monte-Carlo(2).png}
-                \caption{Espace des objectifs avec solutions non dominés et meilleure solution}
+                \caption{Espace des objectifs avec solutions non dominées et meilleure solution.}
             \end{figure}
 
-            En augmentant le nombre d'échantillons, nous pouvons avoir une meilleure précision. Ci dessous sont les résultats avec N = 5000 couples. 
+            En augmentant le nombre d'échantillons, nous pouvons avoir une meilleure précision. Ci-dessous sont les résultats avec $N = 5000$ couples.
 
             \begin{figure}[H]
                 \centering
                 \includegraphics[height=7cm]{Monte-Carlo_5000.png}
-                \caption{Espace des objectifs avec solutions non dominés et meilleure solution pour N = 5000}
+                \caption{Espace des objectifs avec solutions non dominées et meilleure solution pour $N = 5000$.}
             \end{figure}
 
             \begin{figure}[H]
                 \centering
                 \includegraphics[height=7cm]{Monte-Carlo_5000(1).png}
-                \caption{Espace des objectifs avec solutions non dominés et meilleure solution pour N = 5000}
+                \caption{Espace des objectifs avec solutions non dominées et meilleure solution pour $N = 5000$.}
             \end{figure}
 
             \begin{figure}[H]
                 \centering
                 \includegraphics[height=7cm]{Monte-Carlo_5000(2).png}
-                \caption{Espace des objectifs avec solutions non dominés et meilleure solution pour N = 5000}
+                \caption{Espace des objectifs avec solutions non dominées et meilleure solution pour $N = 5000$.}
             \end{figure}
-            
+
+            \subsection*{Conclusion Monte-Carlo}\addcontentsline{toc}{subsection}{Conclusion Monte-Carlo}
+                Nous constatons que notre chute de tension maximale tourne autour de 110~V pour $N= 1000$ couples et autour de 103~V pour $N = 5000$ couples. En augmentant le nombre d'échantillons, nous obtenons en effet un résultat plus optimale.
 
 
     \section*{Algorithme NSGA-II}\addcontentsline{toc}{section}{Algorithme NSGA-II}
